[gd_scene load_steps=6 format=2]

[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://YL8.gd" type="Script" id=2]
[ext_resource path="res://vs.jpg" type="Texture" id=4]

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 1 )

[node name="Node" type="Node"]
script = ExtResource( 2 )

[node name="Vs" type="Sprite" parent="."]
position = Vector2( 513, 302 )
texture = ExtResource( 4 )

[node name="KIVI" type="Button" parent="Vs"]
margin_left = -485.0
margin_top = 209.0
margin_right = -346.0
margin_bottom = 265.0
rect_pivot_offset = Vector2( 87, 28 )
custom_fonts/font = SubResource( 5 )
text = "KIVI"

[node name="PABER" type="Button" parent="Vs"]
margin_left = -333.0
margin_top = 209.0
margin_right = -194.0
margin_bottom = 265.0
rect_pivot_offset = Vector2( 87, 28 )
custom_fonts/font = SubResource( 5 )
text = "PABER"

[node name="UUSMANG" type="Button" parent="Vs"]
margin_left = -79.0
margin_top = -219.0
margin_right = 61.0
margin_bottom = -163.0
rect_pivot_offset = Vector2( 87, 28 )
custom_fonts/font = SubResource( 5 )
text = "UUS MÄNG"

[node name="KAARID" type="Button" parent="Vs"]
margin_left = -183.0
margin_top = 208.0
margin_right = -44.0
margin_bottom = 264.0
rect_pivot_offset = Vector2( 87, 28 )
custom_fonts/font = SubResource( 5 )
text = "KÄÄRID"

[node name="RichTextLabel" type="RichTextLabel" parent="Vs"]
margin_left = -167.0
margin_top = -281.0
margin_right = 193.0
margin_bottom = -156.0
custom_fonts/normal_font = SubResource( 6 )
text = "KIVI-PABER-KÄÄRID"

[connection signal="pressed" from="Vs/KIVI" to="." method="_on_KIVI_pressed"]
[connection signal="pressed" from="Vs/PABER" to="." method="_on_PABER_pressed"]
[connection signal="pressed" from="Vs/UUSMANG" to="." method="_on_UUSMANG_pressed"]
[connection signal="pressed" from="Vs/KAARID" to="." method="_on_KAARID_pressed"]
